--- a/app/src/main/res/layout/list_item_layout.xml
+++ b/app/src/main/res/layout/list_item_layout.xml
@@ -7,5 +7,6 @@
     android:padding="12dp"
     android:singleLine="true"
     android:textSize="22sp"
-    android:ellipsize="end">
+    android:ellipsize="end"
+    android:textColor="#FFFFFF">
 </TextView>
