--- a/app/src/main/res/layout/list_item_layout.xml
+++ b/app/src/main/res/layout/list_item_layout.xml
@@ -1,24 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--<RelativeLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content" >-->
+    android:layout_height="wrap_content" >
 
     <TextView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:padding="12dp"
-        android:singleLine="true"
-        android:textSize="22sp"
-        android:ellipsize="end"
-        android:textColor="#FFFFFF">
-    </TextView>
-
-    <!--<TextView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="fill_parent"
+        android:id="@+id/noteTitleTextView"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:padding="12dp"
@@ -26,8 +14,21 @@
         android:textSize="22sp"
         android:ellipsize="end"
         android:textColor="#FFFFFF"
-        android:layout_alignParentRight="true">
-    </TextView>-->
+        android:layout_alignParentLeft="true">
+    </TextView>
 
-    <!--
-</RelativeLayout>-->
+    <TextView
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:padding="12dp"
+        android:text="Date"
+        android:singleLine="true"
+        android:textSize="18sp"
+        android:ellipsize="end"
+        android:textColor="#FFFFFF"
+        android:layout_alignParentRight="true">
+    </TextView>
+
+
+</RelativeLayout>
