--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,16 +5,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:layout_height="50dp"
+        android:id="@+id/linearLayout">
+        <Button
+            android:layout_height="50dp"
+            android:layout_width="0dp"
+            android:layout_weight="0.6"
+            android:id="@+id/titleSort"
+            android:text="Title Sort" />
+        <Button
+            android:layout_height="50dp"
+            android:layout_width="0dp"
+            android:layout_weight="0.4"
+            android:id="@+id/dateSort"
+            android:text="Date Sort" />
+    </LinearLayout>
 
     <ListView
         android:id="@android:id/list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:clickable="false">
+        android:clickable="false"
+        android:layout_below="@+id/linearLayout">
     </ListView>
-
-
-
 </RelativeLayout>
